tcw3/designer/tests/bad/input_circular2.tcwdl
pub comp crate::Comp2 {
    const wm: tcw3_pal::Wm { pub set; }

    wire wire1: u32 = |wire2| wire2;
    wire wire2: u32 = |wire1| wire1;
}
